# netlink-packet-generic

./: CHANGELOG  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: list_generic_family.rs
src/: buffer.rs  constants.rs  header.rs  lib.rs  message.rs  traits.rs
src/ctrl/: mod.rs
src/ctrl/nlas/: mcast.rs  mod.rs  oppolicy.rs  ops.rs  policy.rs
src/devlink/: mod.rs
src/devlink/nldev/: mod.rs
tests/: query_family_id.rs
