[package]
name = "netlink-packet-generic"
version = "0.3.2"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rust-netlink/netlink-packet-generic"
repository = "https://github.com/rust-netlink/netlink-packet-generic"
keywords = ["netlink", "linux"]
license = "MIT"
readme = "README.md"
description = "generic netlink packet types"

[dependencies]
anyhow = "1.0.39"
libc = "0.2.86"
byteorder = "1.4.2"
netlink-packet-core = { version = "0.5.0" }
netlink-packet-utils = { version = "0.5.2" }

[dev-dependencies]
netlink-sys = { version = "0.8.3" }
